// APITable <https://github.com/apitable/apitable>
// Copyright (C) 2022 APITable Ltd. <https://apitable.com>
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with this program.  If not, see <http://www.gnu.org/licenses/>.

syntax = "proto3";

package grpc.common;

import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

option java_multiple_files = true;
option java_package = "com.apitable.integration.grpc";

message BasicResult {
  int32 code = 1;
  string message = 2;
  bool success = 3;
}

message ServerRoomChangeRo {
  string room_id = 1;
  google.protobuf.Any data = 2;
}
